After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698999 - bytesicon: fix a memory leak
bytesicon: fix a memory leak
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-04-26 21:08 UTC by Cosimo Cecchi
Modified: 2013-04-27 10:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bytesicon: fix a memory leak (741 bytes, patch)
2013-04-26 21:08 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2013-04-26 21:08:05 UTC
See patch
Comment 1 Cosimo Cecchi 2013-04-26 21:08:08 UTC
Created attachment 242623 [details] [review]
bytesicon: fix a memory leak
Comment 2 Allison Karlitskaya (desrt) 2013-04-26 22:15:59 UTC
Review of attachment 242623 [details] [review]:

Sure.
Comment 3 Cosimo Cecchi 2013-04-27 10:46:14 UTC
Attachment 242623 [details] pushed as 463022c - bytesicon: fix a memory leak