bytesicon: fix a memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=698999